<resources>

    <string name="app_name">TabLayout</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="slash_fragment">Slash Fragment</string>
    <string name="community_fragment">Community Fragment</string>
    <string name="notification_fragment">Notification Fragment</string>
    <string name="email_fragment">Email Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="img_title1">User Name 1</string>
    <string name="img_title2">User Name 2</string>
    <string name="img_title3">User Name 3</string>
    <string name="img_title4">User Name 4</string>
    <string name="img_title5">User Name 5</string>
    <string name="img_sub_title1">Sub-Title 1</string>
    <string name="img_sub_title2">Sub-Title 2</string>
    <string name="img_sub_title3">Sub-Title 3</string>
    <string name="img_sub_title4">Sub-Title 4</string>
    <string name="img_sub_title5">Sub-Title 5</string>
    <string name="direct_mess">Find direct messages</string>
    <string name="profile">User Profile</string>
    <string name="find_message">Find Direct Message</string>
    <string name="setting">Setting</string>
    <string name="message">Message</string>
    <string name="add_mail">Add message or group</string>
    <string name="back">Back</string>
    <string name="direct_messages">Direct Messages</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages_setting">Messages setting</string>
    <string name="profile_info">Profile</string>
    <string name="premium">Premium</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="lists">Lists</string>
    <string name="spaces">Spaces</string>
    <string name="monetization">Monetization</string>
    <string name="username">Username</string>
    <string name="following">X Following</string>
    <string name="followers">Y Followers</string>
    <string name="setting_and_support"><![CDATA[Settings & Support]]></string>
    <string name="settings_privacy">Settings and Privacy</string>
    <string name="help_center">Help Center</string>
    <string name="openDrawer">Drawer Opened</string>
    <string name="closeDrawer">Drawer Closed</string>
    <string name="email_setting">Email Setting</string>
    <string name="create_group">Create a group</string>
</resources>