<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".EmailFragment">

    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="53dp"
        android:clickable="true"
        android:contentDescription="@string/add_mail"
        android:src="@drawable/mailadd" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:paddingTop="60dp"
        android:paddingBottom="50dp">
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/message1"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:contentDescription="@string/message"
                android:src="@drawable/message1" />

            <ImageView
                android:id="@+id/message2"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:contentDescription="@string/message"
                android:src="@drawable/message2" />

            <ImageView
                android:id="@+id/message3"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:contentDescription="@string/message"
                android:src="@drawable/message3" />

            <ImageView
                android:id="@+id/message4"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:contentDescription="@string/message"
                android:src="@drawable/message4" />

            <ImageView
                android:id="@+id/message5"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:contentDescription="@string/message"
                android:src="@drawable/message5"/>

            <ImageView
                android:id="@+id/message6"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:contentDescription="@string/message"
                android:src="@drawable/message6"/>

            <ImageView
                android:id="@+id/message7"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:contentDescription="@string/message"
                android:src="@drawable/message7"/>

            <ImageView
                android:id="@+id/message8"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:contentDescription="@string/message"
                android:src="@drawable/message8"/>

            <ImageView
                android:id="@+id/message9"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:contentDescription="@string/message"
                android:src="@drawable/message9"/>
            <ImageView
                android:id="@+id/message10"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:contentDescription="@string/message"
                android:src="@drawable/message1" />

            <ImageView
                android:id="@+id/message11"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:contentDescription="@string/message"
                android:src="@drawable/message2" />

            <ImageView
                android:id="@+id/message12"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:contentDescription="@string/message"
                android:src="@drawable/message3" />

            <ImageView
                android:id="@+id/message13"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:contentDescription="@string/message"
                android:src="@drawable/message4" />

            <ImageView
                android:id="@+id/message14"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:contentDescription="@string/message"
                android:src="@drawable/message5"/>

            <ImageView
                android:id="@+id/message15"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:contentDescription="@string/message"
                android:src="@drawable/message6"/>

            <ImageView
                android:id="@+id/message16"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:contentDescription="@string/message"
                android:src="@drawable/message7"/>

            <ImageView
                android:id="@+id/message17"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:contentDescription="@string/message"
                android:src="@drawable/message8"/>

            <ImageView
                android:id="@+id/message18"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:contentDescription="@string/message"
                android:src="@drawable/message9"/>
        </LinearLayout>
    </ScrollView>

    <!--    <com.google.android.material.appbar.AppBarLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
    <!--        android:layout_alignParentTop="true">-->
    <!--&lt;!&ndash;        <androidx.constraintlayout.widget.ConstraintLayout&ndash;&gt;-->
    <!--&lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:layout_height="wrap_content">&ndash;&gt;-->
    <!--&lt;!&ndash;    &ndash;&gt;-->
    <!--&lt;!&ndash;            &lt;!&ndash; Left Icon &ndash;&gt;&ndash;&gt;-->
    <!--&lt;!&ndash;            <ImageView&ndash;&gt;-->
    <!--&lt;!&ndash;                android:id="@+id/account_icon"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:layout_width="20dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:contentDescription="@string/profile"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:src="@drawable/default_profile"&ndash;&gt;-->
    <!--&lt;!&ndash;                app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
    <!--&lt;!&ndash;                app:layout_constraintTop_toTopOf="parent"&ndash;&gt;-->
    <!--&lt;!&ndash;                app:layout_constraintBottom_toBottomOf="parent"/>&ndash;&gt;-->
    <!--&lt;!&ndash;    &ndash;&gt;-->
    <!--&lt;!&ndash;            &lt;!&ndash; Central Icon &ndash;&gt;&ndash;&gt;-->
    <!--&lt;!&ndash;            <ImageView&ndash;&gt;-->
    <!--&lt;!&ndash;                android:id="@+id/twitter_icon"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:layout_width="300dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:contentDescription="@string/find_message"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:src="@drawable/find_message"&ndash;&gt;-->
    <!--&lt;!&ndash;                app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
    <!--&lt;!&ndash;                app:layout_constraintEnd_toEndOf="parent"&ndash;&gt;-->
    <!--&lt;!&ndash;                app:layout_constraintTop_toTopOf="parent"&ndash;&gt;-->
    <!--&lt;!&ndash;                app:layout_constraintBottom_toBottomOf="parent"/>&ndash;&gt;-->
    <!--&lt;!&ndash;    &ndash;&gt;-->
    <!--&lt;!&ndash;            &lt;!&ndash; Right Icon &ndash;&gt;&ndash;&gt;-->
    <!--&lt;!&ndash;            <ImageView&ndash;&gt;-->
    <!--&lt;!&ndash;                android:id="@+id/more_icon"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:layout_width="20dp"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:contentDescription="@string/setting"&ndash;&gt;-->
    <!--&lt;!&ndash;                android:src="@drawable/setting"&ndash;&gt;-->
    <!--&lt;!&ndash;                app:layout_constraintEnd_toEndOf="parent"&ndash;&gt;-->
    <!--&lt;!&ndash;                app:layout_constraintTop_toTopOf="parent"&ndash;&gt;-->
    <!--&lt;!&ndash;                app:layout_constraintBottom_toBottomOf="parent"/>&ndash;&gt;-->
    <!--&lt;!&ndash;    &ndash;&gt;-->
    <!--&lt;!&ndash;        </androidx.constraintlayout.widget.ConstraintLayout>&ndash;&gt;-->
    <!--    </com.google.android.material.appbar.AppBarLayout>-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        android:padding="16dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Left Icon -->
            <ImageView
                android:id="@+id/account_icon"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/profile"
                android:src="@drawable/default_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <!-- Central Icon -->
            <ImageView
                android:id="@+id/twitter_icon"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/find_message"
                android:src="@drawable/find_message"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <!-- Right Icon -->
            <ImageView
                android:id="@+id/more_icon"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/setting"
                android:src="@drawable/setting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>
</RelativeLayout>